Version 2.9.0-pre-alpha: (May-2015)

   * Add support for reverse mapping, DBus.Introspect to matching Java interface, 
     when the DBus interface name, is not the same as Java interface name.
         <mario -dot- silva -dot- costa -at- gmail -dot- com>     
   * Add package  org.freedesktop.dbus.mappings, with xml parser classes, to parse 
	 intropection data, and mappings interface, to maintain previous compatibility
	 (unfinished).   
         <mario -dot- silva -dot- costa -at- gmail -dot- com>     
   * Add to Remote Object Java Proxy, support for all interfaces provided by, 
     DBus.Introspect for which there is a matching Java interface.
         <mario -dot- silva -dot- costa -at- gmail -dot- com>     
   * Casting, Remote Object references, in return methods, signals, and properties
     to any of their supported DBus interfaces, is now supported.
         <mario -dot- silva -dot- costa -at- gmail -dot- com>     

Version 2.8:

   * Patch manpage source to build with docbook2x (Patch from Alexander Kurtakov 
         <akurtako -at- redhat -dot- com>)

Version 2.7:

	* Fix bug in disconnected signal/exception handling (Spotted by Serkan Kaba
			<serkan_kaba -at- yahoo -dot- com>)
	* Fix bug in empty signals (Spotted by Daniel Wagner <Daniel -dot- Wagner
			-at- bmw-carit -dot- de>)
	* Fix bug in maps containing complex types (Spotted by Tim Court <tim -dot- 
			court -at- venture3systems -dot- com>)
	* Fix signal handling bug in DBusDaemon (Spotted by Markus Gaebelein 
			<Markus -dot- Gaebelein -at- fiducia -dot- de>)
	* Make MessageReader/Writer use Buffered streams to try and improve
			performance
	* Support reading session bus address from file in $HOME
	* Fix TCP cookie timestamp problems (Report/fix from Johannes Felten
			<johannesfelten -at- googlemail -dot- com>)
	* Add handleError() method to callbacks (breaks backwards source compatibility)

Version 2.6:

	* Add DBusConnection.releaseBusName API