@@ -1,3 +1,4 @@
+ * Review usage of ObjectPath, and the semantics on the DBus spec, conventional name.
  * (May-2015) Refactor, transformation from java classes and method invocation, to be implemented in
  new mapping, interfaces.
  * Add to mapping interfaces, map member (signal,property,method), map interface.
